force-app/main/default/objects/Trainer__c/fields/Average_marks_of_graduates__c.field-meta.xml
<CustomField>
    <fullName>Average_marks_of_graduates__c</fullName>
    <formula>Total_marks_of_graduates__c  /  No_of_graduates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average marks of graduates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>