force-app/main/default/objects/Trainer__c/fields/No_of_graduates__c.field-meta.xml
<CustomField>
    <fullName>No_of_graduates__c</fullName>
    <label>No of graduates</label>
    <summaryForeignKey>Student__c.Trainer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>