force-app/main/default/objects/Trainer__c/fields/Total_marks_of_graduates__c.field-meta.xml
<CustomField>
    <fullName>Total_marks_of_graduates__c</fullName>
    <label>Total marks of graduates</label>
    <summarizedField>Student__c.Marks__c</summarizedField>
    <summaryForeignKey>Student__c.Trainer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>