force-app/main/default/objects/Trainer__c/listViews/First_Queue_Trainer.listView-meta.xml
<ListView>
    <fullName>First_Queue_Trainer</fullName>
    <filterScope>Queue</filterScope>
    <label>First Queue</label>
    <queue>First_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>